<resources>
    <string name="app_name">Family Map</string>
    <string name="helloWorld">Hello World</string>
    <string name="server_host">Server Host:</string>
    <string name="server">Server</string>
    <string name="server_port">Server Port:</string>
    <string name="user_name">User Name:</string>
    <string name="password">Password:</string>
    <string name="first_name">First Name:</string>
    <string name="last_name">Last Name:</string>
    <string name="email">Email:</string>
    <string name="gender">Gender:</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="sign_in">SIGN IN</string>
    <string name="register">REGISTER</string>
    <string name="show_selected">Show Selected</string>
    <string name="title_activity_maps">Map</string>
    <string name="mapFragmentMessage">Map Fragment</string>
    <string name="click_on_a_marker_to_see_event_details">Click on a marker to see event details</string>
    <string name="search">search</string>
    <string name="settings">settings</string>
    <string name="genders">gender</string>
    <string name="default_string">Click on a marker to see event details</string>
    <string name="first_name_">First Name</string>
    <string name="last_name_">Last Name</string>
    <string name="gender_">Gender</string>
    <string name="eventsTitle">Life Events</string>
    <string name="peopleTitle">Family</string>
    <string name="life_story_lines">Life Story Lines</string>
    <string name="show_life_story_lines">SHOW LIFE STORY LINES</string>
    <string name="family_tree_lines">Family Tree Lines</string>
    <string name="show_family_tree_lines">SHOW FAMILY TREE LINES</string>
    <string name="spouse_lines">Spouse Lines</string>
    <string name="show_spouse_lines">SHOW SPOUSE LINES</string>
    <string name="father_s_side">Father\'s Side</string>
    <string name="father_s_side_">Father\'s Side</string>
    <string name="filter_by_father_s_side_of_family">FILTER BY FATHER\'S SIDE OF FAMILY</string>
    <string name="mother_s_side">Mother\'s Side</string>
    <string name="filter_by_mother_s_side_of_family">FILTER BY MOTHER\'S SIDE OF FAMILY</string>
    <string name="male_events">Male Events</string>
    <string name="filter_events_based_on_gender">FILTER EVENTS BASED ON GENDER</string>
    <string name="female_events">Female Events</string>
    <string name="return_to_login_screen">RETURN TO LOGIN SCREEN</string>
    <string name="logout">Logout</string>
    <string name="threepoints">threePoints</string>
</resources>