<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/personLayout">

    <TextView
        android:id="@+id/setFirstName"
        android:layout_width="match_parent"
        android:layout_height="29dp"
        android:textStyle="bold"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/firstName"
        android:layout_width="match_parent"
        android:layout_height="29dp"
        android:text="@string/first_name_" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/DarkGray" />

    <TextView
        android:id="@+id/setLastName"
        android:layout_width="match_parent"
        android:layout_height="29dp"
        android:textStyle="bold"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/lastName"
        android:layout_width="match_parent"
        android:layout_height="29dp"
        android:text="@string/last_name_" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/DarkGray" />

    <TextView
        android:id="@+id/setGender"
        android:layout_width="match_parent"
        android:layout_height="29dp"
        android:textStyle="bold"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/gender"
        android:layout_width="match_parent"
        android:layout_height="29dp"
        android:text="@string/gender_" />

    <View
        android:id="@+id/endViews"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/DarkGray" />

    <ExpandableListView
        android:id="@+id/expandableListView"
        android:layout_width="match_parent"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:divider="@color/DarkGray"
        android:dividerHeight="0.5dp"
        android:indicatorLeft="?android:attr/expandableListPreferredItemIndicatorLeft"
        tools:context=".view.PersonActivity"
        android:layout_height="match_parent" />
</LinearLayout>